# minecraft_2D

./: CMakeLists.txt  readme.md
include/: camera.h  config.h  data.h  destroy_stack.h  fifo.h  files_api.h  global.h  hash_table.h  includes.h  math_utilities.h  render.h  types.h  world.h
src/: data.c  destroy_stack.c  fifo.c  files_api.c  hash_table.c  main.c  render.c  world.c
